today is 21 khordad 98--2

--- a/app/src/main/res/layout/cart_row.xml
+++ b/app/src/main/res/layout/cart_row.xml
@@ -24,7 +24,7 @@
         android:textColor="@color/colorPrimaryText"/>
 
     <TextView
-        android:id="@+id/totalPrice"
+        android:id="@+id/priceTv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@+id/productIv"
