--- a/app/src/main/res/drawable/red_rounded_10.xml
+++ b/app/src/main/res/drawable/red_rounded_10.xml
@@ -1,11 +1,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="#d71620" />
+    <solid android:color="@color/colorAccent" />
 
     <corners
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp" />
+        android:bottomLeftRadius="5dp"
+        android:bottomRightRadius="5dp"
+        android:topLeftRadius="5dp"
+        android:topRightRadius="5dp" />
 
 </shape>
