--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -34,15 +34,16 @@
                 android:id="@+id/cardview"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:transitionName="cardview"
-                android:layout_marginEnd="16dp"
                 android:layout_marginStart="72dp"
-                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginEnd="16dp"
+                android:transitionName="card"
+                app:cardCornerRadius="2dp"
+                app:cardElevation="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:cardCornerRadius="10dp"
-                app:cardElevation="0dp">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -52,10 +53,10 @@
                         android:id="@+id/iv"
                         android:layout_width="match_parent"
                         android:layout_height="300dp"
-                        android:transitionName="poster"
                         android:scaleType="centerCrop"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        android:transitionName="poster"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <com.smarteist.autoimageslider.SliderView
                         android:id="@+id/imageSlider"
@@ -84,11 +85,11 @@
             android:paddingBottom="8dp"
             android:alpha="0"
             android:scaleY="0"
-            android:background="@drawable/round_20_primary"
+            android:background="@drawable/red_rounded_10"
             android:textColor="@color/colorWhiteSecondary"
             app:layout_constraintTop_toTopOf="@+id/cc1"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="290dp"
+            android:layout_marginTop="280dp"
             android:layout_marginEnd="32dp"/>
 
         <TextView
@@ -96,7 +97,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="74dp"
-            android:layout_marginTop="16dp"
             android:text="درباره"
             android:textColor="@color/colorSecondaryText"
             android:textSize="12sp"
@@ -125,7 +125,7 @@
             android:layout_marginStart="72dp"
             android:layout_marginTop="16dp"
             app:cardElevation="2dp"
-            app:cardCornerRadius="10dp">
+            app:cardCornerRadius="2dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -219,7 +219,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="74dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:text="نگهداری"
             android:textColor="@color/colorSecondaryText"
             android:textSize="12sp"
