--- a/app/src/main/res/layout/product_row.xml
+++ b/app/src/main/res/layout/product_row.xml
@@ -12,17 +12,26 @@
     app:cardCornerRadius="10dp"
     android:layout_marginTop="14dp">
 
-    <com.makeramen.roundedimageview.RoundedImageView
-        android:id="@+id/imageIv"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:minHeight="150dp"
-        android:maxHeight="500dp"
-        android:transitionName="poster"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        app:riv_corner_radius="10dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:transitionName="card"
+        app:cardElevation="4dp"
+        app:cardCornerRadius="2dp">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imageIv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:minHeight="150dp"
+            android:maxHeight="500dp"
+            android:transitionName="poster"
+            android:adjustViewBounds="true"
+            android:scaleType="centerCrop"/>
+
+    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -32,7 +41,7 @@
         android:layout_marginLeft="12dp"
         android:layout_marginBottom="6dp"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/imageIv">
+        app:layout_constraintTop_toBottomOf="@+id/cardview">
 
         <TextView
             android:id="@+id/nameTv"
