--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,7 +11,7 @@
         <item
             android:id="@+id/nav_receipts"
             android:icon="@drawable/ic_receipt_white_24dp"
-            android:title="رسیدهای خرید" />
+            android:title="سفارشات من" />
         <item
             android:id="@+id/nav_account"
             android:icon="@drawable/ic_account_circle_black_24dp"
