--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_transaction"
+        android:id="@+id/action_sort"
         android:orderInCategory="100"
-        android:title="@string/action_transaction"
+        android:title="مرتب سازی"
         app:showAsAction="always"
-        android:icon="@drawable/ic_swap_horiz_white_24dp"/>
+        android:icon="@drawable/ic_sort_24dp"/>
 
 </menu>
