--- a/app/src/main/res/layout/activity_image_viewer.xml
+++ b/app/src/main/res/layout/activity_image_viewer.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="#000"
     android:id="@+id/puller"
-    tools:context="ir.elevin.mykotlinapplication.ImageViewerActivity">
+    tools:context="ir.elevin.azhand.ImageViewerActivity">
 
     <com.github.chrisbanes.photoview.PhotoView
         android:id="@+id/posterIv"
