--- a/app/src/main/res/layout/card_row.xml
+++ b/app/src/main/res/layout/card_row.xml
@@ -4,19 +4,18 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="4dp"
     android:layout_marginBottom="8dp"
-    android:paddingStart="4dp"
-    android:paddingEnd="4dp"
+    android:layout_marginEnd="8dp"
+    android:layout_marginStart="4dp"
     android:clipToPadding="false"
     app:cardElevation="4dp"
     app:cardCornerRadius="10dp">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minWidth="200dp"
-        android:minHeight="100dp"/>
+        android:layout_width="250dp"
+        android:layout_height="170dp"
+        android:scaleType="centerCrop"/>
 
 </androidx.cardview.widget.CardView>
