--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,13 +9,13 @@
             android:icon="@drawable/ic_shopping_cart_white_24dp"
             android:title="سبد خرید" />
         <item
-            android:id="@+id/nav_receipts"
+            android:id="@+id/nav_orders"
             android:icon="@drawable/ic_receipt_white_24dp"
-            android:title="سفارشات من" />
+            android:title="سفارشات" />
         <item
-            android:id="@+id/nav_account"
-            android:icon="@drawable/ic_account_circle_black_24dp"
-            android:title="اطلاعات کاربری" />
+            android:id="@+id/nav_support"
+            android:icon="@drawable/ic_headset_mic_black_24dp"
+            android:title="پشتیبانی" />
         <item
             android:visible="false"
             android:id="@+id/nav_logout"
