today is 2 tir 98

--- a/app/src/main/res/layout/dialog_add_address.xml
+++ b/app/src/main/res/layout/dialog_add_address.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="8dp">
 
         <TextView
+            android:id="@+id/headerTitleTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
