--- a/app/src/main/res/drawable/round_10_black.xml
+++ b/app/src/main/res/drawable/round_10_black.xml
@@ -1,6 +1,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <solid android:color="@color/colorPrimary" />
+    <solid android:color="@color/colorAccent" />
 
     <corners
         android:bottomLeftRadius="5dp"
@@ -9,7 +9,7 @@
         android:topRightRadius="5dp" />
 
     <stroke
-        android:color="@color/colorPrimaryDark"
-        android:width="2dp"/>
+        android:color="@color/colorAccentDark"
+        android:width="4dp"/>
 
 </shape>
