--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:textSize="10sp"
             android:gravity="center"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorSecondaryText"
             android:text="@string/phone_des"
             tools:ignore="SmallSp" />
 
@@ -49,8 +49,8 @@
             android:layout_height="wrap_content"
             android:minWidth="200dp"
             android:inputType="phone"
-            android:textColor="@color/colorPrimaryDark"
-            android:textColorHint="@color/colorPrimary"
+            android:textColor="@color/colorGreenDark"
+            android:textColorHint="@color/colorGreenDark"
             android:gravity="center"
             android:hint="تلفن همراه"/>
 
