--- a/app/src/main/res/layout/dialog_support.xml
+++ b/app/src/main/res/layout/dialog_support.xml
@@ -3,6 +3,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minWidth="300dp"
+    android:gravity="center_horizontal"
+    android:animateLayoutChanges="true"
     android:background="@drawable/rounded_dialog">
 
     <TextView
@@ -12,10 +14,19 @@
         android:textSize="25sp"
         android:text="پشتیبانی"/>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
         android:id="@+id/supportersRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp">
 
     </androidx.recyclerview.widget.RecyclerView>
