--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,7 +15,7 @@
         <item
             android:id="@+id/nav_support"
             android:icon="@drawable/ic_headset_mic_black_24dp"
-            android:title="پشتیبانی" />
+            android:title="مشاوره و پشتیبانی" />
         <item
             android:visible="false"
             android:id="@+id/nav_logout"
