--- a/app/src/main/res/layout/dialog_update.xml
+++ b/app/src/main/res/layout/dialog_update.xml
@@ -18,6 +18,8 @@
         android:id="@+id/versionNameTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingRight="12dp"
+        android:paddingLeft="12dp"
         android:textSize="10sp"
         android:layout_marginTop="16dp"
         android:text="بروزرسانی"/>
@@ -26,6 +28,8 @@
         android:id="@+id/isForceTv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingRight="12dp"
+        android:paddingLeft="12dp"
         android:textSize="12sp"
         android:text="بروزرسانی"/>
 
@@ -35,7 +39,9 @@
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="12dp"
+        android:layout_marginBottom="20dp"
+        android:paddingRight="12dp"
+        android:paddingLeft="12dp"
         android:text="بروزرسانی"/>
 
     <Button
