--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,9 +26,9 @@
         android:orientation="vertical">
 
         <ImageView
-            android:layout_width="120dp"
+            android:layout_width="200dp"
             android:layout_height="120dp"
-            app:srcCompat="@drawable/logo512"
+            app:srcCompat="@drawable/header_transparent"
             android:padding="4dp"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="16dp"/>
