--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -132,6 +132,7 @@
                 android:layout_height="match_parent">
 
                 <TextView
+                    android:visibility="gone"
                     android:id="@+id/warrantyTextTv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -188,7 +189,6 @@
                         android:layout_height="match_parent"
                         android:text="1"
                         android:textColor="@color/colorWhite"
-                        android:background="#518A4A"
                         android:gravity="center"
                         android:textSize="14sp"/>
 
