--- a/app/src/main/res/layout/activity_choose_address.xml
+++ b/app/src/main/res/layout/activity_choose_address.xml
@@ -78,6 +78,7 @@
     </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="20dp"
         app:srcCompat="@drawable/shadow_top"
@@ -85,6 +86,7 @@
         android:alpha="0.3"/>
 
     <TextView
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="انتخاب کارت"
@@ -96,6 +98,7 @@
         android:textSize="12sp"/>
 
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="180dp"
         android:orientation="vertical"
@@ -126,7 +129,7 @@
         android:layout_height="10dp"
         app:srcCompat="@drawable/shadow_bottom"
         android:scaleType="fitXY"
-        android:alpha="0.3"/>
+        android:alpha="0.2"/>
 
     <LinearLayout
         android:id="@+id/colorLayoutPayButton"
