--- a/app/src/main/res/layout/dialog_comment.xml
+++ b/app/src/main/res/layout/dialog_comment.xml
@@ -39,6 +39,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
         android:numStars="5"
+        android:stepSize="1"
         android:rating="5"/>
 
     <androidx.appcompat.widget.AppCompatEditText
