--- a/app/src/main/res/layout/product_row.xml
+++ b/app/src/main/res/layout/product_row.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         android:transitionName="card"
+        app:cardBackgroundColor="#eeeeee"
         app:cardElevation="4dp"
         app:cardCornerRadius="2dp">
 
@@ -27,6 +28,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:transitionName="poster"
+            android:background="#eeeeee"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"/>
 
